--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MongoDB Atlas Connection String
 # Obtén esta URL desde MongoDB Atlas > Connect > Drivers > Node.js
 # Reemplaza <username> y <password> con tus credenciales
-MONGODB_URI=mongodb+srv://rojudasa:L03YN3ErnSYQhm1O@rlrojudasa.842asft.mongodb.net/?appName=RlRojudasa
+MONGODB_URI=
 
 # Nombre de la base de datos (opcional, por defecto: rl-rojudasa)
-MONGODB_DB_NAME=RlRojudasa
+MONGODB_DB_NAME=
