--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.3.1",
+    "@astrojs/vercel": "^7.4.0",
     "astro": "^4.5.0",
     "dotenv": "^17.3.1",
     "mongodb": "^7.1.0",
