--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rl-rojudasa-tournament",
   "version": "1.0.0",
   "type": "module",
+  "engines": { "node": ">=20.0.0" },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
